--- a/admin/public/admin.html
+++ b/admin/public/admin.html
@@ -12,7 +12,6 @@
       margin: 0;
       padding: 20px;
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
       color: #333;
     }
     h1 {
@@ -39,34 +38,28 @@
       text-align: left;
     }
     th {
-      background-color: #27ae60;
-      color: #fff;
+
+
       font-weight: 600;
     }
-    tr:nth-child(even) {
-      background: #f9f9f9;
-    }
+
     .action-btn {
       padding: 6px 12px;
       border: none;
       border-radius: 4px;
       cursor: pointer;
-      transition: background 0.3s;
+
     }
     .edit-btn {
-      background: #3498db;
+      background: #959b9f;
       color: #fff;
     }
-    .edit-btn:hover {
-      background: #2980b9;
-    }
+
     .delete-btn {
-      background: #e74c3c;
+      background: #ffa89e;
       color: #fff;
     }
-    .delete-btn:hover {
-      background: #c0392b;
-    }
+
     form {
       background: #fff;
       padding: 20px;
@@ -149,7 +142,7 @@
     #chatForm button {
       padding: 10px;
       border: none;
-      background: #27ae60;
+      background: #5b7b68;
       color: #fff;
       cursor: pointer;
     }
